WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229793
[JSC] Fix invalid exception checks in Temporal classes
https://bugs.webkit.org/show_bug.cgi?id=229793
Summary
[JSC] Fix invalid exception checks in Temporal classes
Ross Kirsling
Reported
2021-09-01 23:46:34 PDT
[JSC] Fix invalid exception checks in Temporal classes
Attachments
Patch
(7.08 KB, patch)
2021-09-01 23:47 PDT
,
Ross Kirsling
no flags
Details
Formatted Diff
Diff
Patch for landing
(7.03 KB, patch)
2021-09-02 00:53 PDT
,
Ross Kirsling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2021-09-01 23:47:21 PDT
Created
attachment 437115
[details]
Patch
Yusuke Suzuki
Comment 2
2021-09-02 00:45:55 PDT
Comment on
attachment 437115
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=437115&action=review
r=me with comments.
> Source/JavaScriptCore/runtime/TemporalDurationPrototype.cpp:132 > + RETURN_IF_EXCEPTION(scope, encodedJSValue());
In new code, we are using RETURN_IF_EXCEPTION(scope, { });
> Source/JavaScriptCore/runtime/TemporalDurationPrototype.cpp:171 > + RETURN_IF_EXCEPTION(scope, encodedJSValue());
Ditto.
> Source/JavaScriptCore/runtime/TemporalDurationPrototype.cpp:186 > + RETURN_IF_EXCEPTION(scope, encodedJSValue());
Ditto.
> Source/JavaScriptCore/runtime/TemporalDurationPrototype.cpp:205 > + RETURN_IF_EXCEPTION(scope, encodedJSValue());
Ditto.
Ross Kirsling
Comment 3
2021-09-02 00:53:51 PDT
Created
attachment 437120
[details]
Patch for landing
EWS
Comment 4
2021-09-02 01:52:16 PDT
Committed
r281912
(
241224@main
): <
https://commits.webkit.org/241224@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 437120
[details]
.
Radar WebKit Bug Importer
Comment 5
2021-09-02 01:55:08 PDT
<
rdar://problem/82665434
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug