[JSC] Fix invalid exception checks in Temporal classes https://bugs.webkit.org/show_bug.cgi?id=229793

Reviewed by Yusuke Suzuki.

* runtime/TemporalCalendarPrototype.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):
* runtime/TemporalDuration.cpp:
(JSC::TemporalDuration::fromObject):
(JSC::TemporalDuration::toDuration):
(JSC::TemporalDuration::with const):
* runtime/TemporalDurationPrototype.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):


Canonical link: https://commits.webkit.org/241224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281912 268f45cc-cd09-0410-ab3c-d52691b4dbfc